--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <p>Java</p>
       <p>HTML & CSS</p>
       <p>JavaScript</p>
+      <p>PHP</p>
       <p>ROS</p>
     </div>
     <br>
@@ -133,28 +134,28 @@
 
   <h1>WORK EXPERIENCE</h1>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/csail.jpg" height="50" width="50">
+    <a href="https://www.csail.mit.edu/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/csail.jpg" height="50" width="50"></a>
     <h3>MIT CSAIL Lab</h3>
     <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2017</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
-      <li>Testing and analyzing sensors and their performance for improvement of positioning of small vehicles like quadcopters and small rovers</li>
+      <li>Tested and analyzed sensors and their performance for improvement of positioning of small vehicles including quadcopters and rovers</li>
       <li>Measured variance of ultra-wide band sensors using ROS and Python</li>
       <li>Setting up experiments to pair ultra-wide band sensors with GPS sensors to improve localization of small vehicles</li>
     </ul>
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/misti.jpeg" height="50" width="50">
+    <a href="http://misti.mit.edu/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/misti.jpeg" height="50" width="50"></a>
     <h3>MISTI Hong Kong</h3>
     <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2016</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Experimented with a Convolutional Neural Network (CNN) Python model to yield best possible time spent and accuracy in training digits and cells data
-      <li>Increased accuracy in training by tweaking parameters in the code and learned about machine learning and computer skills</li>
+      <li>Increased accuracy by adjusting parameters, learned about the different parameters and how they can affect output</li>
     </ul>
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/boeing.jpg" height="50" width="50">
+    <a href="https://www.boeing.com/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/boeing.jpg" height="50" width="50"></a>
     <h3>Boeing HS Internship</h3>
     <h5><strong>Phantom Phoenix Intern</strong>  |  <i>Jun-Aug 2014</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -165,17 +166,17 @@
   <br>
   <h1>ACTIVITIES / LEADERSHIP</h1>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/wieecs.png" height="50" width="50">
+    <a href="http://womenineecs.mit.edu/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/wieecs.png" height="50" width="50"></a>
     <h3>MIT Women in EECS</h3>
     <h5><strong>Community Events Committee</strong>  |  <i>Aug 2017-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
-      <li>Planning budgets and logistics as well as executing community events to support and engage our community of women in EECS on campus in a team of 3</li>
+      <li>Leading the committee on planning budgets and logistics as well as executing community events to support and engage our community of women in EECS on campus</li>
       <li>Organizing events that include lightning talks, workshops, movie/game nights, and mixers with other colleges/other women in engineering clubs on campus to bring passionate women together and encourage support of each other</li>
     </ul>
   </div>
   <br>
     <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/adt.JPG" height="50" width="50">
+    <a href="http://adt.mit.edu/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/adt.JPG" height="50" width="50"></a>
     <h3>MIT Asian Dance Team</h3>
     <h5><strong>Choreographer</strong>  |  <i>Feb 2017-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -196,7 +197,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/upop.jpg" height="50" width="50">
+    <a href="https://upop.mit.edu/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/upop.jpg" height="50" width="50"></a>
     <h3>MIT Undergraduate Practice Opportunities Program</h3>
     <h5><strong>Participant</strong>  |  <i>Oct 2016-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -206,7 +207,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/codeforgood.JPG" height="50" width="50">
+    <a href="http://codeforgood.mit.edu/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/codeforgood.JPG" height="50" width="50"></a>
     <h3 id="huh">MIT Code For Good</h3>
     <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -217,7 +218,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle icons" src="img/vex.jpg" height="50" width="50">
+    <a href="https://www.vexrobotics.com/"><img style="float: left" hspace="10px" class="img-circle icons" src="img/vex.jpg" height="50" width="50"></a>
     <h3>WHS Vex Robotics</h3>
     <h5><strong>Programmer</strong>  |  <i>Sept 2013-Jun 2015</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -235,7 +236,6 @@
     <p class ="w">Outside of classes, you can probably find me doing one of the following...</p>
     <p class="w text-center">I like to do arts and crafts, like making star jars as gifts, folding origami, and making cards for random occasions. I like to dance. I'm on my school's Asian Dance Team and like learning various pieces I find on YouTube with friends. I love playing the piano, clarinet, and learning new instruments. I like to travel to pretty, interesting places...I dream to see an aurora and a clear, star speckled sky one day. I also love cooking, watching shows/movies, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, hanging with friends and family, and drinking tea. I love milk tea and macaroni and cheese!</p>
     <p class ="w">You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
-    <br>
     <center><img src="img/sunshine.gif" class="img-circle sun text-center"></center>
     <br><p>Images credit: <a href="http://chibird.com">Chibird</a> :)</p>
   </div>
