--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <p>Thanks for visiting.</p>
     <br>
   </div>
-  <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle"/>
+  <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="home-image"/>
 </div>
 
 
@@ -233,9 +233,9 @@
 <div id="funsies" class="bg-1 z">
   <div class="container">
     <h1 class="text-center">HOBBIES</h1>
-    <p class ="w">Outside of classes, you can probably find me doing one of the following...</p>
-    <p class="w text-center">I like to do arts and crafts, like making star jars as gifts, folding origami, and making cards for random occasions. I like to dance. I'm on my school's Asian Dance Team and like learning various pieces I find on YouTube with friends. I love playing the piano, clarinet, and learning new instruments. I like to travel to pretty, interesting places...I dream to see an aurora and a clear, star speckled sky one day. I also love cooking, watching shows/movies, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, hanging with friends and family, and drinking tea. I love milk tea and macaroni and cheese!</p>
-    <p class ="w">You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
+    <p class ="hobbies">Outside of classes, you can probably find me doing one of the following...</p>
+    <p class="hobbies text-center">I like to do arts and crafts, like making star jars as gifts, folding origami, and making cards for random occasions. I like to dance. I'm on my school's Asian Dance Team and like learning various pieces I find on YouTube with friends. I love playing the piano, clarinet, and learning new instruments. I like to travel to pretty, interesting places...I dream to see an aurora and a clear, star speckled sky one day. I also love cooking, watching shows/movies, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, hanging with friends and family, and drinking tea. I love milk tea and macaroni and cheese!</p>
+    <p class ="hobbies">You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
     <center><img src="img/sunshine.gif" class="img-circle sun text-center"></center>
     <br><p>Images credit: <a href="http://chibird.com">Chibird</a> :)</p>
   </div>
