--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     <p>One thing I'm passionate about is making the world happier, whether it's helping other people, innovating exciting things, or fixing a few of the many problems that we can't escape.</p>
     <p>I believe coding is powerful and can achieve all the above.</p>
     <p>Thanks for visiting.</p>
+    <a href="mailto:rzhao2@andrew.cmu.edu">
+  <i class="material-icons fadein" style="font-size:40px; position: relative; top: 7px;">email</i>
+</a>
     <br>
   </div>
   <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="home-image"/>
@@ -81,48 +84,35 @@
     <h1>COURSEWORK</h1>
     <div class="row classes">
       <ul class="col-md-6 x" style="list-style: none">
-        <li style="font-size: 140%">Freshman Fall</li>
-        <li>>  18.02 - Multivariable Calculus</li>
-        <li>>  8.01 - Classical Mechanics</li>
-        <li>>  7.012 - Introduction to Biology</li>
-        <li>>  STS.034 - Science Communication</li>
-        <br>
-        <li style="font-size: 140%">Freshman IAP</li>
-        <li>>  6.149 - Introduction to Python</li>
-        <br>
-        <li style="font-size: 140%">Freshman Spring</li>
-        <li>>  6.01 - Introduction to EECS I</li>
-        <li>>  5.111 - Principles of Chemical Science</li>
-        <li>>  8.02 - Electricity and Magnetism</li>
-        <li>>  24.01 - Classics of Western Philosophy</li>
-        <br><br><br>
-        <li style="font-size: 140%">Junior Fall</li>
-        <li>>  6.034 - Artificial Intelligence</li>
-        <li>>  6.036 - Introduction to Machine Learning</li>
-        <li>>  6.046 - Design and Analysis of Algorithms</li>
-        <li>>  21G.107 - Streamlined Chinese I</li>
-        <br>
-        <li style="font-size: 140%">Junior Spring</li>
-        <li>>  6.831 - User Interface Design & Implementation</li>
-        <li>>  6.033 - Computer System Engineering</li>
-        <li>>  21G.107 - Streamlined Chinese II</li>
-        <li>>  21M.600 - Introduction to Acting</li>
+        <li style="font-size: 140%">Technical</li>
+        <li>>  Multivariable Calculus</li>
+        <li>>  Classical Mechanics</li>
+        <li>>  Electricity and Magnetism</li>
+        <li>>  Fundamentals of Programming</li>
+        <li>>  Introduction to EECS</li>
+        <li>>  Computation Structures</li>
+        <li>>  Mathematics for Computer Science</li>
+        <li>>  Introduction to Algorithms</li>
+        <li>>  Elements of Software Construction</li>
+        <li>>  Artificial Intelligence</li>
+        <li>>  Introduction to Machine Learning</li>
+        <li>>  Design and Analysis of Algorithms</li>
+        <li>>  User Interface Design & Implementation</li>
+        <li>>  Computer System Engineering</li>
       </ul>
 
       <ul class="col-md-6 x" style="list-style: none">
-        <li style="font-size: 140%">Sophomore Fall</li>
-        <li>>  6.009 - Fundamentals of Programming</li>
-        <li>>  6.004 - Computation Structures</li>
-        <li>>  6.042 - Mathematics for Computer Science</li>
-        <li>>  21G.501 - Japanese I</li>
-        <br>
-        <li style="font-size: 140%">Sophomore Spring</li>
-        <li>>  6.006 - Introduction to Algorithms</li>
-        <li>>  6.031 - Elements of Software Construction</li>
-        <li>>  9.00 - Introduction to Psychological Science t</li>
-        <li>>  21G.502 - Japanese II</li>
-
+        <li style="font-size: 140%">Humanities and Social Science</li>
+        <li>> Science Communication</li>
+        <li>>  Classics of Western Philosophy</li>
+        <li>>  Introduction to Psychological Science</li>
+        <li>>  Japanese I</li>
+        <li>>  Japanese II</li>
+        <li>>  Streamlined Chinese I</li>
+        <li>>  Streamlined Chinese II</li>
+        <li>>  Introduction to Acting</li>
       </ul>
+
     </div>
   </div>
 </div>
