--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
 <!-- Experiences Section -->
-<div id="experiences" class="part background-2">
+<div id="experiences" class="big-part background-2">
   <div class="container text-center prof">
     <h1 class="title">EXPERIENCES</h1>
     <h1 class="exp-title">WORK EXPERIENCE</h1>
@@ -86,7 +86,7 @@
     <a><img hspace="10px" class="img-circle icons" src="img/misti.jpeg" data-toggle="modal" data-target="#misti-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/boeing.jpg" data-toggle="modal" data-target="#boeing-modal"></a>
     <br><br><br>
-    <h1>ACTIVITES / LEADERSHIP</h1>
+    <h1 style="margin-top: 40px">ACTIVITIES / LEADERSHIP</h1>
     <a><img hspace="10px" class="img-circle icons" src="img/hackny.png" data-toggle="modal" data-target="#hackny-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/wieecs.png" data-toggle="modal" data-target="#wieecs-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/adt.JPG" data-toggle="modal" data-target="#adt-modal"></a>
@@ -330,7 +330,7 @@
 </div>
 
 <!-- Funsies Section -->
-<div id="funsies" class="part background-2 z">
+<div id="funsies" class="big-part background-2 z">
   <div class="hobbies-stuff">
     <h1 class="hobbies-title">HOBBIES</h1>
     <p class ="hobbies">Outside of classes, you can probably find me doing one of the following...</p>
