--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="modal-body">
             <a href="https://misti.mit.edu/"><img class="description-img" src="img/misti.jpeg"></a>
             <h5><strong>Undergrad Researcher</strong></h5>
-            <i>Jun-Aug 2016<</i>
+            <i>Jun-Aug 2016</i>
             <br><br>
             <ul class="exp-description">
               <li>Experimented with a Convolutional Neural Network (CNN) Python model to yield best possible time spent and accuracy in training digits and cells data
