--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <a><img hspace="10px" class="img-circle icons" src="img/misti.jpeg" data-toggle="modal" data-target="#misti-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/boeing.jpg" data-toggle="modal" data-target="#boeing-modal"></a>
     <br><br><br>
-    <h1 style="margin-top: 40px">ACTIVITIES / LEADERSHIP</h1>
+    <h1 style="margin-top: 40px">ORGANIZATIONS / PROGRAMS</h1>
     <a><img hspace="10px" class="img-circle icons" src="img/hackny.png" data-toggle="modal" data-target="#hackny-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/wieecs.png" data-toggle="modal" data-target="#wieecs-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/adt.JPG" data-toggle="modal" data-target="#adt-modal"></a>
