--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <a><img hspace="10px" class="img-circle icons" src="img/wieecs.png" data-toggle="modal" data-target="#wieecs-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/adt.JPG" data-toggle="modal" data-target="#adt-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/codeu.png" data-toggle="modal" data-target="#codeu-modal"></a>
-    <a><img hspace="10px" class="img-circle icons" src="img/upop.jpg" data-toggle="modal" data-target="#upop-modal"></a>
-    <a><img hspace="10px" class="img-circle icons" src="img/codeforgood.JPG" data-toggle="modal" data-target="#codeforgood-modal"></a>
+    <a><img hspace="10px" class="img-circle icons" src="img/upop.png" data-toggle="modal" data-target="#upop-modal"></a>
+    <a><img hspace="10px" class="img-circle icons" src="img/codeforgood.png" data-toggle="modal" data-target="#codeforgood-modal"></a>
     <a><img hspace="10px" class="img-circle icons" src="img/vex.jpg" data-toggle="modal" data-target="#vex-modal"></a>
 
     <!-- modals -->
@@ -252,7 +252,7 @@
             <h4 class="modal-title">MIT Undergraduate Practice Opportunities Program</h4>
           </div>
           <div class="modal-body">
-            <a href="http://upop.mit.edu/"><img class="description-img" src="img/upop.jpg"></a>
+            <a href="http://upop.mit.edu/"><img class="description-img" src="img/upop.png"></a>
             <h5><strong>Participant</strong></h5>
             <i>Oct 2016-May 2017</i>
             <br><br>
@@ -276,7 +276,7 @@
             <h4 class="modal-title">MIT Code For Good</h4>
           </div>
           <div class="modal-body">
-            <a href="http://codeforgood.mit.edu/"><img class="description-img" src="img/codeforgood.JPG"></a>
+            <a href="http://codeforgood.mit.edu/"><img class="description-img" src="img/codeforgood.png"></a>
             <h5><strong>Consulting Team</strong></h5>
             <i>Oct 2016-Feb 2017</i>
             <br><br>
@@ -321,11 +321,57 @@
   </div>
 </div>
 
+<div class="all-projects">
+
 <!-- Projects Section -->
-<div id="projects" class="container y">
+<div id="projects" class="projects-font">
   <h1 class="title">PROJECTS</h1>
 
   <h1>WORK IN PROGRESS</h1>
+
+  <div class="all-projects">
+  <div class="card">
+    <img class="card-img-top" src="https://data.whicdn.com/images/307134942/superthumb.jpg?t=1518423542" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Project!</h5>
+      <p class="card-text">COMING SOOOOOOOOOOOOON.....</p>
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="https://data.whicdn.com/images/307134942/superthumb.jpg?t=1518423542" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Project!</h5>
+      <p class="card-text">COMING SOOOOOOOOOOOOON.....</p>
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="https://data.whicdn.com/images/307134942/superthumb.jpg?t=1518423542" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Project!</h5>
+      <p class="card-text">COMING SOOOOOOOOOOOOON.....</p>
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="https://data.whicdn.com/images/307134942/superthumb.jpg?t=1518423542" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Project!</h5>
+      <p class="card-text">COMING SOOOOOOOOOOOOON.....</p>
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="https://data.whicdn.com/images/307134942/superthumb.jpg?t=1518423542" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Project!</h5>
+      <p class="card-text">COMING SOOOOOOOOOOOOON.....</p>
+    </div>
+  </div>
+</div>
+
+</div>
 
 </div>
 
