--- a/index.html
+++ b/index.html
@@ -432,15 +432,15 @@
           <br>
           <p>
             We created a project gallery site for ScriptEd students to submit their projects to.
-            This included a form page where a screenshot, Github usernames, and tags (like category) could be submitted.
-            The site also has an admin page, where admins can add tags, approve and delete projects, provide feedback, and edit tags.
+            This included a form page where many fields including a screenshot, Github usernames, and tags (like category) could be submitted.
+            The site also has an admin page, where admins can add and edit tags, approve and delete submitted projects, and provide feedbacks.
           </p>
           <p>
-            The project gallery displays projects in grid format, and projects can be sorted by different variables.
+            The project gallery displays projects in grid format, and projects can be sorted by different variables including most recent and search by names.
             Projects in the gallery also lead to their individual project page, which shows GitHub usernames and icons and the project descriptions for instance.
           </p>
           <p>
-            This was a HackNY social good project.
+            This was a social good project I worked on during HackNY.
           </p>
           <br>
           <p>Languages and tools: Python, HTML & CSS, JavaScript, Flask, MySQL, SQLAlchemy</p>
@@ -465,17 +465,18 @@
           <h5><strong>Teacher Dashboard</strong></h5>
           <br>
           <p>
-            We created a dashboard for teachers and district admins to view data from the Cognitive Toybox app.
-            This included a data section with charts and tables showing a range of metrics.
+            We created a dashboard for teachers and district admins who use the Cognitive Toybox app to view data from app to better
+            know what to focus on for districts, schools, and individual students.
+            This included a data section with charts and tables showing a range of metrics, including average scores vs domain, or category of learning.
           </p>
           <p>
-            There is a classroom management page, where distrct admins and teachers can also edit classroom and district settings as well as the dashboard users on the management page.
+            There is also a classroom management page, where distrct admins and teachers can edit classroom and district settings as well as the dashboard users on the management page.
           </p>
           <p>
-            Lastly, there's a reports page, where objective and individual student reports can be seen.
+            Lastly, there's a reports page, where objective and individual student reports can be seen and also exported.
           </p>
           <p>
-            This was a HackNY social good project.
+            This was a social good project I worked on during HackNY.
           </p>
           <br>
           <p>Languages and tools: HTML & CSS, JavaScript, React, Chart.js</p>
