--- a/index.html
+++ b/index.html
@@ -371,11 +371,10 @@
   </div>
 </div>
 
-<div class="all-projects">
 
 <!-- Projects Section -->
 <div id="projects" class="projects-font">
-  <h1 class="title">PROJECTS</h1>
+  <h1 class="title project-title">PROJECTS</h1>
 
   <div class="all-projects">
   <a>
@@ -570,12 +569,51 @@
   <div class="hobbies-stuff">
     <h1 class="hobbies-title">HOBBIES</h1>
     <p class ="hobbies">Outside of classes, you can probably find me doing one of the following...</p>
-    <br>
-    <p class="hobbies text-center">I like to do arts and crafts, like folding origami and making cards for random occasions. I like to dance. I'm on my school's Asian Dance Team and like learning various pieces I find on YouTube with friends. I love playing the piano, clarinet, and learning new instruments. I like to travel to pretty, interesting places...I dream to see an aurora and a clear, star speckled sky one day. I also love cooking, watching shows/movies, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, playing instruments, hanging with friends and family, and drinking tea. I love milk tea and macaroni and cheese!</p>
-    <br>
-    <p class ="hobbies">You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
-    <center><img src="img/sunshine.gif" class="img-circle sun text-center"></center>
-    <br><p>Image credit: <a href="http://chibird.com">Chibird</a> :)</p>
+
+    <!-- Interests Section -->
+      <section id="interests-section">
+        <div id="interest-cards">
+          <div class="interest-card">
+            <img class="interests-img" src="img/arts.jpg" alt="Sock plushies">
+            <h2>Arts and Crafts</h2>
+            <p>
+              I love making things, especially as gifts to other people! I enjoy making things
+              from cards to plushies to wall decorations. I want to learn how to crochet sometime.
+              I enjoy giving people things I've made because it's like they have a tiny piece of me
+              with them! I also find hand-made things really cute and meaningful.
+            </p>
+          </div>
+          <div class="interest-card">
+            <img class="interests-img" src="img/halloween.PNG" alt="Clarinet in band">
+            <h2>Music</h2>
+            <p>
+              I like making music! I learned piano when I was young and have played
+              the clarinet since 4th grade. Music helps me destress, and I've enjoyed playing
+              in bands as well as with my friends. My favorite class in high school was probably
+              band. I loved the sound when everyone plays together! I also tried out jazz (clarinet + alto sax) for 2 years!
+            </p>
+          </div>
+          <div class="interest-card">
+            <img class="interests-img" src="img/dance.jpg" alt="KPOP dance cover">
+            <h2>Dance</h2>
+            <p>
+              I like dancing! A super long time ago, I did traditional Chinese folk dance and some ballet.
+              I then did not dance for a long time. My freshman year of MIT, I joined MIT's Asian Dance Team, and since then,
+              I have been dancing every semester! I enjoy doing both traditional and KPOP pieces as well as co-choreographing!
+            </p>
+          </div>
+          <div class="interest-card">
+            <img class="interests-img" src="img/dessert.jpg" alt="Dessert drink">
+            <h2>Desserts</h2>
+            <p>
+              I love desserts! I enjoy trying out different foods from different places when I travel
+              or visit somewhere new. I especially like cute and matcha flavored desserts! What's better
+              to go with travelling than yummy food! Some of my favorite drinks / desserts include milk and thai tea,
+              lavender / matcha / ube ice cream, and taiyaki!
+            </p>
+          </div>
+        </div>
+      </section>
   </div>
 </div>
 
